Fix spacing issue with confirmation spinner

--- a/modules/web/src/app/settings/admin/custom-link-form/style.scss
+++ b/modules/web/src/app/settings/admin/custom-link-form/style.scss
@@ -16,6 +16,7 @@
 
 km-spinner-with-confirmation {
   margin-bottom: 21px;
+  margin-right: 15px;
 }
 
 .custom-links-form-delete-button {
