--- a/modules/web/src/app/shared/components/spinner-with-confirmation/style.scss
+++ b/modules/web/src/app/shared/components/spinner-with-confirmation/style.scss
@@ -17,6 +17,7 @@
 :host {
   align-self: center;
   left: 22px;
+  position: relative;
 
   .mat-spinner {
     height: 22px;
